# Remmina

./: .gitignore  CMakeLists.txt
remmina-plugins/: CMakeLists.txt
remmina-plugins/rdp/: CMakeLists.txt
